update project, minor fixes
