# src/main/java/hu/virgo/calendar/application/contoller/CalendarController.java
@@ -4,7 +4,7 @@ import hu.virgo.calendar.application.api.CalendarApi;
 import hu.virgo.calendar.application.mapper.CalendarMapper;
 import hu.virgo.calendar.application.model.Event;
 import hu.virgo.calendar.application.model.TimeSlot;
-import hu.virgo.calendar.domain.service.CalendarService;
+import hu.virgo.calendar.domain.service.EventService;
 import jakarta.validation.ValidationException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
@@ -20,20 +20,20 @@ import java.util.List;
 @RequiredArgsConstructor
 public class CalendarController implements CalendarApi {
 
-    private final CalendarService calendarService;
+    private final EventService eventService;
     private final CalendarMapper calendarMapper;
 
     @Override
-    public ResponseEntity<Event> calendarEventsGet(OffsetDateTime dateTime) {
-        return calendarService.findByDateTime(dateTime)
+    public ResponseEntity<Event> getEventByDateTime(OffsetDateTime dateTime) {
+        return eventService.findByDateTime(dateTime)
                 .map(e -> ResponseEntity.ok(calendarMapper.map(e)))
                 .orElse(ResponseEntity.notFound().build());
     }
 
     @Override
-    public ResponseEntity<Event> calendarEventsPost(Event event) {
+    public ResponseEntity<Event> createEvent(Event event) {
         try {
-            Event created = calendarMapper.map(calendarService.save(calendarMapper.map(event)));
+            Event created = calendarMapper.map(eventService.save(calendarMapper.map(event)));
             return ResponseEntity.ok(created);
         } catch (ValidationException ex) {
             throw new ResponseStatusException(
@@ -42,16 +42,16 @@ public class CalendarController implements CalendarApi {
     }
 
     @Override
-    public ResponseEntity<List<TimeSlot>> calendarScheduleAvailableDateGet(LocalDate date) {
+    public ResponseEntity<List<TimeSlot>> availableTimeSlotsOfWeek(LocalDate date) {
         OffsetDateTime offsetDateTime = calendarMapper.toOffsetDateTime(date);
-        List<TimeSlot> timeSlots = calendarMapper.mapToTimeSlots(calendarService.availableTimeSlotsOfWeek(offsetDateTime));
+        List<TimeSlot> timeSlots = calendarMapper.mapToTimeSlots(eventService.availableTimeSlotsOfWeek(offsetDateTime));
         return ResponseEntity.ok(timeSlots);
     }
 
     @Override
-    public ResponseEntity<List<Event>> calendarScheduleDateGet(LocalDate date) {
+    public ResponseEntity<List<Event>> scheduleOfWeek(LocalDate date) {
         OffsetDateTime offsetDateTime = calendarMapper.toOffsetDateTime(date);
-        List<Event> events = calendarMapper.mapToEvents(calendarService.scheduleOfWeek(offsetDateTime));
+        List<Event> events = calendarMapper.mapToEvents(eventService.scheduleOfWeek(offsetDateTime));
         return ResponseEntity.ok(events);
     }
 }
